--- a/master/Makefile
+++ b/master/Makefile
@@ -1,12 +1,6 @@
 # developer utilities
 pylint:
-	@rm -f pylint.fail
-	find buildbot -maxdepth 1 -mindepth 1 |egrep -v '(png|pyc|newsfra)'  |sed 's|/|.|' |sed 's|.py$$||'| while read module ;\
-	do \
-		echo $$module ;\
-		pylint --rcfile=../common/pylintrc $$module || echo > pylint.fail ;\
-	done
-	pylint --rcfile=../common/pylintrc docs/conf.py
+	pylint -j4 --rcfile=../common/pylintrc buildbot
 	@test ! -f fail
 
 tutorial:
