--- a/worker/Makefile
+++ b/worker/Makefile
@@ -1,6 +1,6 @@
 # developer utilities
 pylint:
-	pylint --rcfile=../common/pylintrc buildbot_worker
+	pylint -j4 --rcfile=../common/pylintrc buildbot_worker
 
 flake8:
 	flake8 --config=../common/flake8rc buildbot_worker
