UI for File and Patch forceschedulers

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -51,6 +51,7 @@ c['schedulers'].append(schedulers.SingleBranchScheduler(
 
 c['schedulers'].append(schedulers.ForceScheduler(
                             name="force",
+                            codebases=[util.CodebaseParameter("foo", patch=util.PatchParameter())],
                             builderNames=["runtests", "slowruntests"]))
 
 ####### BUILDERS
