--- a/circle.yml
+++ b/circle.yml
@@ -4,16 +4,39 @@
 machine:
   python:
     version: 2.7.11
+  node:
+    version: 6.11.4
 
 dependencies:
+  pre:
+    - sudo apt-get update; sudo apt-get install libenchant-dev python3-dev
+    - go get github.com/tcnksm/ghr
   override:
-    - pyenv global 2.7.11
+    - pip install -U pip
     - pip install -r requirements-ci.txt
+    - pip install -r requirements-cidocs.txt
+    - (cd www/base; yarn install)
 
 test:
   override:
     - make docs
+    - make tarballs -j4
+    # pyinstaller: build the buildbotworker in a special virtualenv
+    # circle ci pythons do not include the necessary dynamic libraries for pyinstaller
+    - virtualenv -p /usr/bin/python3.4 .venv/
+    - .venv/bin/pip install twisted[tls] -e worker pyinstaller
+    - .venv/bin/pyinstaller -F pyinstaller/buildbot-worker.spec
+    # we test the new generated binary with the global virtualenv
+    - SANDBOXED_WORKER_PATH=`pwd`/dist/buildbot-worker trial --reporter=text --rterrors buildbot.test.integration.interop
 
 general:
   artifacts:
     - "master/docs/_build/html/"
+    - "dist"
+
+deployment:
+  release:
+    tag: /v.*/
+    commands:
+      - mv dist/buildbot-worker dist/buildbot-worker-linux-amd64-`git describe --tags`.bin
+      - ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/
