--- a/www/guanlecoja-ui/.travis.yml
+++ b/www/guanlecoja-ui/.travis.yml
@@ -1,11 +1,10 @@
 language: node_js
 
 node_js:
-  - 4
+  - 8
 
 before_install:
-  - npm install -g gulp
-
+  - yarn global add gulp
 script:
   - gulp default
   - gulp prod
