remove parallel tarball build
There are still unstabilities in build, which I can't explain.

--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -176,7 +176,7 @@ script:
 
   - title: maketarballs
     condition: TESTS == "smokes"
-    cmd: make tarballs -j4
+    cmd: make tarballs 
 
   - title: protractor tests
     condition: TESTS == "smokes"
