--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -115,6 +115,8 @@ before_script:
 
 # Tests running commands
 script:
+  - title: leak secret
+    cmd: !i "echo %(secret:TEST_SECRET)s"
   # make frontend_install_tests takes 17 min, so we only do it post submit
   - title: frontend tests
     condition: TESTS == "js" and TRAVIS_PULL_REQUEST
@@ -176,7 +178,7 @@ script:
 
   - title: maketarballs
     condition: TESTS == "smokes"
-    cmd: make tarballs 
+    cmd: make tarballs
 
   - title: protractor tests
     condition: TESTS == "smokes"
