--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -113,7 +113,8 @@ c['buildbotURL'] = "http://localhost:8010/"
 # minimalistic config to activate new web UI
 c['www'] = dict(port=8010,
                 change_hook_dialects={'base': True},
-                plugins=dict(waterfall_view={}, console_view={}, grid_view={}, badges={}))
+                plugins=dict(waterfall_view={}, console_view={}, grid_view={}, badges={}),
+                ui_default_config={'Builders.buildFetchLimit': 201})
 
 c['buildbotNetUsageData'] = None
 ####### DB URL
