--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ install:
   - "python -c \"import sys; print(sys.executable)\""
   - "python -V -V"
   - "python -m pip install -U pip setuptools wheel"
+  - "python -m pip install -U git+https://github.com/pypa/pip.git"
   # Twisted requires pywin32 on Windows in order to spawn processes.
   - "python -m pip install pypiwin32"
 
