Use chrome instead of phantomjs for running tests

--- a/www/data_module/package.json
+++ b/www/data_module/package.json
@@ -28,15 +28,14 @@
     "istanbul-instrumenter-loader": "^1.0.0",
     "jasmine-core": "^2.3.4",
     "karma": "^1.1.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "2.0.1",
     "node-libs-browser": "2.0.0",
     "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "1.2.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.1",
