Use a multi-stage build so that we can build binary wheels in "buildbot-build" container.
We then copy the binary wheels into the final buildbot container.

This allows us to avoid installing build tools like gcc in the final container.

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -3,49 +3,89 @@
 # please follow docker best practices
 # https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/
 #
-# Provides a base alpine 3.4 image with latest buildbot master installed
-# Alpine base build is ~130MB vs ~500MB for the ubuntu build
 
-# Note that the UI and worker packages are the latest version published on pypi
-# This is to avoid pulling node inside this container
+# Use a multi-stage build:
+# https://docs.docker.com/develop/develop-images/multistage-build/
+#
+# Provide an intermediate Docker image named "buildbot-build".
+# This intermediate image builds binary wheels
+# which get installed in the final image.
+# This allows us to avoid installing build tools like gcc in the final image.
 
-FROM        alpine:3.5
+FROM        alpine:3.7 AS buildbot-build
 MAINTAINER  Buildbot maintainers
 
 # Last build date - this can be updated whenever there are security updates so
 # that everything is rebuilt
-ENV         security_updates_as_of 2017-02-08
+ENV         security_updates_as_of 2018-04-10
 
 
 COPY . /usr/src/buildbot
-# We install as much as possible python packages from the distro in order to avoid
-# having to pull gcc for building native extensions
-# Some packages are at the moment (10/2016) only available on @testing
 RUN \
+    echo @edgecommunity http://nl.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
     echo @testing http://nl.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories && \
-    echo @edge http://nl.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
+    apk add --no-cache \
+        git \
+        python-dev \
+        libffi-dev \
+        openssl-dev \
+        py-pip \
+        alpine-sdk \
+        tar \
+        tzdata \
+        curl && \
+# install pip dependencies
+    pip install --upgrade pip setuptools wheel && \
+    pip install "buildbot[bundle,tls]" && \
+    pip install -r /usr/src/buildbot/requirements-docker-extras.txt && \
+    pip install "/usr/src/buildbot" && \
+    mkdir -p wheels && \
+    pip list --format freeze | grep -v '^buildbot=' > wheels/wheels.txt && \
+    cd wheels && \
+    pip wheel -r wheels.txt
+
+
+
+#==============================================================================================
+# Build the final image here.  Use build artifacts from the buildbot-build
+# container.
+
+# Note that the UI and worker packages are the latest version published on pypi
+# This is to avoid pulling node inside this container
+
+FROM        alpine:3.7
+MAINTAINER  Buildbot maintainers
+
+# Last build date - this can be updated whenever there are security updates so
+# that everything is rebuilt
+ENV         security_updates_as_of 2018-04-11
+
+
+COPY . /usr/src/buildbot
+
+# Build wheels in other container using the Dockerfile.build
+# and copy them into this container.
+# We do this to avoid having to pull gcc for building native extensions.
+COPY --from=buildbot-build /wheels /wheels
+RUN \
+    echo @edgecommunity http://nl.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
+    echo @testing http://nl.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories && \
     apk add --no-cache \
         git \
         python \
         py-pip \
-        py-psycopg2 \
-        py-twisted \
-        py-cffi \
-        py-openssl@edge \
-        py-cryptography@edge \
-        py-service_identity@edge \
-        py-sqlalchemy@edge \
         gosu@testing \
-        dumb-init@edge\
-        py-jinja2 \
+        dumb-init \
         tar \
         tzdata \
         curl && \
 # install pip dependencies
     pip install --upgrade pip setuptools && \
+    pip install /wheels/*.whl && \
     pip install "buildbot[bundle,tls]" && \
     pip install "/usr/src/buildbot" && \
-    rm -r /root/.cache
+    rm -r /root/.cache /wheels
+
 
 WORKDIR /var/lib/buildbot
 CMD ["dumb-init", "/usr/src/buildbot/docker/start_buildbot.sh"]
