--- a/www/console_view/package.json
+++ b/www/console_view/package.json
@@ -1,11 +1,42 @@
 {
-    "name": "buildbot-console-view",
-    "engines": {
-        "node": ">=0.10.0",
-        "npm": ">=1.4.0"
-    },
-    "dependencies": {
-        "guanlecoja": "~0.8.3",
-        "gulp": "3.9.0"
-    }
+	"name": "buildbot-console-view",
+	"engines": {
+		"node": ">=0.10.0",
+		"npm": ">=1.4.0"
+	},
+	"dependencies": {
+		"@types/moment": "^2.13.0",
+		"@types/react": "^16.0.5",
+		"@types/react-dom": "^16.0.3",
+		"coffeescript": "^2.2.4",
+		"guanlecoja": "~0.8.0",
+		"gulp": "~3.9.0",
+		"moment": "^2.20.1",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0"
+	},
+	"devDependencies": {
+		"@types/angular": "^1.6.40",
+		"awesome-typescript-loader": "^3.2.3",
+		"babel-core": "^6.26.0",
+		"babel-loader": "^7.1.2",
+		"bitbar-webpack-progress-plugin": "^0.1.3",
+		"coffee-loader": "^0.9.0",
+		"copy-webpack-plugin": "^4.0.1",
+		"css-loader": "^0.28.5",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"file-loader": "^0.11.2",
+		"jade": "^1.11.0",
+		"jade-html-loader": "0.0.3",
+		"json2ts": "0.0.7",
+		"less": "^2.7.2",
+		"less-loader": "^4.0.5",
+		"ng-classify-loader": "0.0.3",
+		"raw-loader": "^0.5.1",
+		"source-map-loader": "^0.2.1",
+		"style-loader": "^0.18.2",
+		"typescript": "^2.5.2",
+		"webpack": "^3.9.1"
+	},
+	"license": "Apache-2.0"
 }
