--- a/www/console_view/package.json
+++ b/www/console_view/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
+		"@uirouter/angularjs": "^1.0.15",
 		"angular": "^1.5.0",
 		"angular-mocks": "^1.5.0",
 		"babel-core": "^6.26.0",
@@ -17,6 +18,7 @@
 		"css-loader": "^0.28.5",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"file-loader": "^0.11.2",
+		"install": "^0.11.0",
 		"jade": "^1.11.0",
 		"jade-html-loader": "0.0.3",
 		"jasmine-core": "^3.1.0",
@@ -29,6 +31,7 @@
 		"less": "^2.7.2",
 		"less-loader": "^4.0.5",
 		"ng-classify-loader": "0.0.3",
+		"npm": "^5.8.0",
 		"raw-loader": "^0.5.1",
 		"source-map-loader": "^0.2.1",
 		"style-loader": "^0.18.2",
