Add dependencies so that pyscopg2 libraries can be built

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -28,7 +28,8 @@ RUN \
         git \
         python-dev \
         libffi-dev \
-        openssl-dev \
+        libressl-dev \
+        postgresql-dev \
         py-pip \
         alpine-sdk \
         tar \
