Add dependencies to that psyopg2 libraries can run.

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -74,6 +74,7 @@ RUN \
     apk add --no-cache \
         git \
         python \
+        postgresql-libs \
         py-pip \
         gosu@testing \
         dumb-init \
