Use jasmine-spec-reporter to print out the names of tests as they are running

--- a/smokes/package.json
+++ b/smokes/package.json
@@ -4,6 +4,7 @@
     "description": "smoke tests for buildbot with protractor",
     "main": "index.js",
     "dependencies": {
+        "jasmine-spec-reporter": "^4.2.1",
         "protractor": "^5.1.0",
         "ts-node": "~4.1.0",
         "tslint": "~5.9.1",
