--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -101,6 +101,7 @@ install:
       fi
       if [ $TWISTED != latest -a  $TWISTED != trunk ]; then pip install Twisted==$TWISTED ; fi
       if [ $SQLALCHEMY != latest ]; then pip install sqlalchemy==$SQLALCHEMY; fi
+      pip check
 
 before_script:
   # create real database for tests
