Update Dockerfile to include ssh in the container
Pooling with GitPooler for resources available over ssh do not work.

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -80,7 +80,8 @@ RUN \
         dumb-init \
         tar \
         tzdata \
-        curl && \
+        curl \
+        openssh && \
 # install pip dependencies
     pip install --upgrade pip setuptools && \
     pip install /wheels/*.whl && \
