examples/gitlab.cfg: refactor and tidy.
- less code duplication
- lets you specify regular and smoke builders separately
- mostly passes flake8 now

--- a/master/docs/examples/gitlab.cfg
+++ b/master/docs/examples/gitlab.cfg
@@ -90,71 +90,96 @@ from buildbot.plugins import *
 import os
 import re
 
-def addGitLabProject(repourl, workernames, branch=None):
+
+def makeFactoryNormal(repourl, branch):
     '''
-    Add a builder and a merge request builder for the given branch
-    of the given project, running on the given workers.
-    Give each a Force button.
+    A Factory that builds, tests, and uploads incoming changesets.
+    The branch argument is a default in case the changeset lacks one.
+    '''
+    # Adjust this factory to match your site's build steps.
+    # This example uses the canonical gnu configure/make steps.
+    # Adjust to match your site's build system.
+    f = util.BuildFactory()
+    f.addStep(steps.GitLab(repourl=repourl, branch=branch))
+    f.addStep(steps.ShellCommand(haltOnFailure=True,
+              command=["if test -x ./bootstrap; then ./bootstrap; fi"]))
+    f.addStep(steps.ShellCommand(haltOnFailure=True, command=["./configure"]))
+    f.addStep(steps.ShellCommand(haltOnFailure=True, command=["make"]))
+    f.addStep(steps.ShellCommand(haltOnFailure=True, command=["make check"]))
+    f.addStep(steps.ShellCommand(haltOnFailure=True, command=[": insert upload step here"]))
+    return f
+
+
+def makeFactorySmoke(repourl, branch):
+    '''
+    A Factory that just builds and tests incoming changesets.
+    The branch argument is a default in case the changeset lacks one.
+    '''
+    f = util.BuildFactory()
+    f.addStep(steps.GitLab(repourl=repourl, branch=branch))
+    f.addStep(steps.ShellCommand(haltOnFailure=True,
+              command=["if test -x ./bootstrap; then ./bootstrap; fi"]))
+    f.addStep(steps.ShellCommand(haltOnFailure=True, command=["./configure"]))
+    f.addStep(steps.ShellCommand(haltOnFailure=True, command=["make"]))
+    f.addStep(steps.ShellCommand(haltOnFailure=True, command=["make check"]))
+    return f
+
+
+def repoUrlToName(repourl):
+    '''
     Gets project name from the repourl, ignoring namespace.
     '''
-
-    if branch is None:
-        branch = "master"
     # Strip off everything before project name
     # FIXME: parse this more artfully to allow projects in folders
     name = re.sub(r'^.*/', '', repourl)
     # Strip off .git suffix, if present
-    name = re.sub(r'\.git$', '', name)
+    return re.sub(r'\.git$', '', name)
 
-    # Regular builder
-    # Adjust this factory to match your site's build steps.
-    # This example uses the canonical gnu configure/make steps.
-    factory = util.BuildFactory()
-    factory.addStep(steps.GitLab(repourl=repourl, mode='incremental'))
-    factory.addStep(steps.ShellCommand(haltOnFailure=True, command=["sh", "-c", "if test -x ./bootstrap; then ./bootstrap; fi"]))
-    factory.addStep(steps.ShellCommand(haltOnFailure=True, command=["./configure"]))
-    factory.addStep(steps.ShellCommand(haltOnFailure=True, command=["make"]))
-    factory.addStep(steps.ShellCommand(haltOnFailure=True, command=["make", "check"]))
-    factory.addStep(steps.ShellCommand(haltOnFailure=True, command=["echo", "would package and upload here if this were a real project"]))
 
-    id = name + "-" + branch
+def addBuilder(repourl, branch, flavor, workernames):
+    '''
+    Add a builder for the given project and branch on the given workers.
+    Give each a Force button.
+    flavor must be 'smoke' or 'normal'.
+    '''
+
+    factory = None
+    changehook_category = None
+    if flavor is "normal":
+        # Respond to push events with a normal build
+        changehook_category = "push"
+        factory = makeFactoryNormal(repourl, branch)
+    elif flavor is "smoke":
+        # Respond to merge request events with a smoke build
+        changehook_category = "merge_request"
+        factory = makeFactorySmoke(repourl, branch)
+    else:
+        raise ValueError("wanted 'normal' or 'smoke', got '%s'" % flavor)
+
+    name = repoUrlToName(repourl)
+    id = name + "-" + branch + "-" + flavor
+    builder = util.BuilderConfig(name=id,
+                                 workernames=workernames,
+                                 factory=factory)
+    c['builders'].append(builder)
+
     c['schedulers'].append(schedulers.SingleBranchScheduler(
         name=id,
         change_filter=util.ChangeFilter(
-            project=name, branch=branch, category="push"),
+            project=name, branch=branch, category=changehook_category),
         treeStableTimer=None,
-        builderNames=[id]))
+        builderNames=[builder.name]))
     c['schedulers'].append(schedulers.ForceScheduler(
         name=id + '-force',
-        builderNames=[id]))
-    c['builders'].append(
-        util.BuilderConfig(name=id,
-                           workernames=workernames,
-                           factory=factory))
+        builderNames=[builder.name]))
 
-    # Merge request builder (e.g. smoke test, don't fully publish artifacts;
-    # for quick feedback of works-in-progress)
-    # Adjust this factory to match your site's build steps.
-    tryfactory = util.BuildFactory()
-    tryfactory.addStep(steps.GitLab(repourl=repourl, mode='incremental'))
-    tryfactory.addStep(steps.ShellCommand(haltOnFailure=True, command=["sh", "-c", "if test -x ./bootstrap; then ./bootstrap; fi"]))
-    tryfactory.addStep(steps.ShellCommand(haltOnFailure=True, command=["./configure"]))
-    tryfactory.addStep(steps.ShellCommand(haltOnFailure=True, command=["make"]))
-    tryfactory.addStep(steps.ShellCommand(haltOnFailure=True, command=["make", "check"]))
-    tryid = name + "-" + branch + "-try"
-    c['schedulers'].append(schedulers.SingleBranchScheduler(
-        name=tryid,
-        change_filter=util.ChangeFilter(
-            project=name, branch=branch, category="merge_request"),
-        treeStableTimer=None,
-        builderNames=[tryid]))
-    c['schedulers'].append(schedulers.ForceScheduler(
-        name=tryid + '-force',
-        builderNames=[tryid]))
-    c['builders'].append(
-        util.BuilderConfig(name=tryid,
-                           workernames=workernames,
-                           factory=tryfactory))
+
+# For parts of buildbot that don't support Secret interpolation yet.
+# Once https://github.com/buildbot/buildbot/issues/4118 is fixed,
+# use util.Secret(s) instead.
+def dumbSecret(s):
+    with open(os.path.join(secrets_dir, s), 'r') as myfile:
+        return myfile.read().replace('\n', '')
 
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -166,28 +191,24 @@ c = BuildmasterConfig = {}
 # best practice is to keep them elsewhere else.
 
 # Place the secrets directory next to master.cfg:
-secrets_dir = os.path.join(os.path.dirname(os.path.abspath(__file__)), 'secrets.dir')
+this_dir = os.path.dirname(os.path.abspath(__file__))
+secrets_dir = os.path.join(this_dir, 'secrets.dir')
 c['secretsProviders'] = [secrets.SecretInAFile(dirname=secrets_dir)]
-
-# For parts of buildbot that don't support Secret interpolation yet
-# Once https://github.com/buildbot/buildbot/issues/4118 is fixed,
-# use util.Secret(s) instead.
-def dumbSecret(s):
-    with open(os.path.join(secrets_dir, s), 'r') as myfile:
-        return myfile.read().replace('\n', '')
 
 ####### WORKERS
 
-# The 'workers' list defines the set of recognized workers. Each element is
-# a Worker object, specifying a unique worker name and password.  The same
-# worker name and password must be configured on the worker.
+# The 'workers' list defines the set of recognized workers.
+# Each element is a Worker object, with a unique worker name and password.
+# The same worker name and password must be configured on the worker.
 # CONFIGME
-c['workers'] = [worker.Worker("buildbot-worker", "buildbot-pass")]
-workernames = ["buildbot-worker"]
+c['workers'] = [
+  worker.Worker("buildbot-worker",  "buildbot-pass"),
+]
+workernames = [x.name for x in c['workers']]
 
 # 'protocols' contains information about protocols which master will use for
-# communicating with workers. You must define at least 'port' option that workers
-# could connect to your master with this protocol.
+# communicating with workers. You must define at least a 'port' option;
+# the master will listen on that port for connections from workers.
 # 'port' must match the value configured into the workers (with their
 # --master option)
 c['protocols'] = {'pb': {'port': 9989}}
@@ -208,12 +229,17 @@ c['schedulers'] = []
 # Note that any particular build will only take place on one worker.
 c['builders'] = []
 
-# Call addGitLabProject once for each similar project you want to build.
-# It adds factories, schedulers, and builders for the project
-# in one fell swoop, making it easier to have a large number
-# of similar projects.
-addGitLabProject('git@gitlab.example.com:build/gnu-hello', workernames)
-addGitLabProject('git@gitlab.example.com:build/gnu-time', workernames)
+# Call addBuilder for each similar project you want to build.
+# It adds a builder with both normal and force schedulers.
+# Note: urls must start with git@ and end with .git
+addBuilder('git@gitlab.example.com:build/gnu-hello.git',
+           branch='master', flavor='normal', workernames=workernames)
+addBuilder('git@gitlab.example.com:build/gnu-hello.git',
+           branch='master', flavor='smoke',  workernames=workernames)
+addBuilder('git@gitlab.example.com:build/gnu-time.git',
+           branch='master', flavor='normal', workernames=workernames)
+addBuilder('git@gitlab.example.com:build/gnu-time.git',
+           branch='master', flavor='smoke',  workernames=workernames)
 
 ####### BUILDBOT SERVICES
 
@@ -223,7 +249,7 @@ addGitLabProject('git@gitlab.example.com:build/gnu-time', workernames)
 
 c['services'] = []
 
-# CONFIGME: uncomment for gitlab status reporting
+## CONFIGME: uncomment for gitlab status reporting
 ## Report build status back to GitLab UI
 #c['services'].append(reporters.GitLabStatusPush(
 #    token=util.Secret('my-gitlab-token'),
@@ -250,9 +276,8 @@ c['buildbotURL'] = "http://buildbot.example.com:8010/"
 ## This example tries to show nothing to anonymous users.
 #authz = util.Authz(
 #  allowRules=[
-#    # CONFIGME: replace "<mygroup>" here with a valid gitlab group
-#    util.AnyEndpointMatcher(role="<mygroup>"),
-#    util.AnyEndpointMatcher(role="snorglepuss-does-not-exist", defaultDeny=True),
+#    util.AnyEndpointMatcher(role="platform"),
+#    util.AnyEndpointMatcher(role="xxend-of-listxx", defaultDeny=True),
 #  ],
 #  roleMatchers=[
 #    util.RolesFromGroups()
@@ -262,7 +287,7 @@ c['buildbotURL'] = "http://buildbot.example.com:8010/"
 # minimalistic config to activate new web UI
 c['www'] = dict(
     port=8010,
-    # CONFIGME: uncomment for buildbot authentication
+    ## CONFIGME: uncomment for buildbot authentication
     #auth=util.GitLabAuth("https://gitlab.example.com",
     #                     dumbSecret('my-gitlab-appid'),
     #                     dumbSecret('my-gitlab-appsecret')),
@@ -281,7 +306,7 @@ c['buildbotNetUsageData'] = 'basic'
 ####### DB URL
 
 c['db'] = {
-    # This specifies what database buildbot uses to store its state.  You can leave
-    # this at its default for all but the largest installations.
-    'db_url' : "sqlite:///state.sqlite",
+    # This specifies what database buildbot uses to store its state.
+    # You can leave this at its default for all but the largest installations.
+    'db_url': "sqlite:///state.sqlite",
 }
