--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -53,6 +53,32 @@ c['schedulers'].append(schedulers.ForceScheduler(
                             name="force",
                             builderNames=["runtests", "slowruntests"]))
 
+c['schedulers'].append(schedulers.ForceScheduler(
+    name="custom",
+    builderNames=["runtests"],
+    buttonName="Start Custom Build",
+    codebases = [util.CodebaseParameter(
+        codebase='', project=None, 
+        branch=util.ChoiceStringParameter(
+            name="branch",
+            label="Branch",
+            strict=False,
+            choices=["master", "dev"],
+            autopopulate={
+              'master': {
+                'build_name': 'master',
+              },
+              'dev': {
+                'build_name': 'dev',
+              }
+            }
+    ))],
+    properties=[
+        util.StringParameter(
+            name="build_name",
+            label="Name of the Build release.",
+            default="")]))
+
 ####### BUILDERS
 # The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
 # what steps, and which workers can execute them.  Note that any particular build will
