--- a/master/contrib/systemd/buildbot.service
+++ b/master/contrib/systemd/buildbot.service
@@ -3,13 +3,15 @@ Description=Buildbot Master
 Wants=network.target
 After=network.target
 
+
 [Service]
-Type=forking
-PIDFile=/srv/buildbot/master/twistd.pid
-WorkingDirectory=/srv/buildbot
-ExecStart=/usr/bin/buildbot start master
-ExecReload=/usr/bin/buildbot reconfig master
-ExecStop=/usr/bin/buildbot stop master
+User=buildbot
+Group=buildbot
+WorkingDirectory=/home/buildbot/master
+ExecStart=/usr/local/bin/buildbot start --nodaemon
+ExecReload=/bin/kill -HUP $MAINPIDster
+# if using EC2 Latent worker, you want to uncomment following line, and comment out the Restart line
+# ExecStopPost=shutdown now
 Restart=always
 User=buildbot
 
