--- a/master/contrib/systemd/buildbot.service
+++ b/master/contrib/systemd/buildbot.service
@@ -9,7 +9,7 @@ User=buildbot
 Group=buildbot
 WorkingDirectory=/home/buildbot/master
 ExecStart=/usr/local/bin/buildbot start --nodaemon
-ExecReload=/bin/kill -HUP $MAINPIDster
+ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
 User=buildbot
 
