Switch Travis to use Ubuntu Trusty environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # Travis CI configuration file
 # http://about.travis-ci.org/docs/
-dist: precise
+dist: trusty
 addons:
   postgresql: "9.4"
   apt_packages:
