--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -19,8 +19,7 @@ env:
   - BUILDBOT_TEST_DB_URL=sqlite://
   - HYPER_SIZE=m1
   matrix:
-  # pylint, docs and coverage first as they're more likely to find issues
-  - TWISTED=latest SQLALCHEMY=latest TESTS=pylint HYPER_SIZE=m3
+  # flake8, docs and coverage first as they're more likely to find issues
   - TWISTED=latest SQLALCHEMY=latest TESTS=flake8 
   - TWISTED=latest SQLALCHEMY=latest TESTS=isort 
   - TWISTED=latest SQLALCHEMY=latest TESTS=docs
@@ -65,6 +64,8 @@ matrix:
   fast_finish: true
   include:
 
+    - python: "3.6"
+      env: TWISTED=latest SQLALCHEMY=latest TESTS=pylint HYPER_SIZE=m3
     # python 3 tests
     - python: "3.4"
       env: TWISTED=latest SQLALCHEMY=latest TESTS=trial
