--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -10,7 +10,7 @@ backports.functools-lru-cache==1.5
 blockdiag==1.5.4
 boto==2.49.0
 boto3==1.8.6
-botocore==1.10.65
+botocore==1.10.65 # pyup: ignore
 cffi==1.11.5
 click==6.7
 configparser==3.5.0
@@ -77,7 +77,7 @@ sqlparse==0.2.4
 Tempita==0.5.2
 termcolor==1.1.0
 toml==0.9.4
-towncrier==18.5.0
+towncrier==18.5.0 # pyup: ignore
 treq==18.6.0
 Twisted==18.7.0
 txaio==18.8.1
