www: Use non-default port for e2e tests

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -128,10 +128,12 @@ c['titleURL'] = "https://launchpad.net/pyflakes"
 # the 'www' entry below, but with an externally-visible host name which the
 # buildbot cannot figure out without some help.
 
-c['buildbotURL'] = "http://localhost:8010/"
+c['buildbotURL'] = "http://localhost:8011/"
 
 # minimalistic config to activate new web UI
-c['www'] = dict(port=8010,
+# we're not using the default port so that it would not accidentally conflict
+# with any development instances of buildbot on developer machines
+c['www'] = dict(port=8011,
                 change_hook_dialects={'base': True},
                 plugins=dict(waterfall_view={}, console_view={}, grid_view={}, badges={}),
                 ui_default_config={'Builders.buildFetchLimit': 201})
