--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -9,8 +9,8 @@ Babel==2.6.0
 backports.functools-lru-cache==1.5
 blockdiag==1.5.4
 boto==2.49.0
-boto3==1.8.6
-botocore==1.10.65 # pyup: ignore
+boto3==1.9.41
+botocore==1.12.41
 cffi==1.11.5
 click==7.0
 configparser==3.5.0
@@ -40,7 +40,7 @@ markdown2==2.3.6
 MarkupSafe==1.0
 mccabe==0.6.1
 mock==2.0.0
-moto==1.3.5
+moto==1.3.7
 olefile==0.46
 packaging==18.0
 pathlib2==2.3.2
