--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -18,6 +18,10 @@ env:
   global:
   - BUILDBOT_TEST_DB_URL=sqlite://
   - HYPER_SIZE=m1
+  # Current moto (1.3.7) requires dummy credentials to work
+  # https://github.com/spulec/moto/issues/1924
+  - AWS_SECRET_ACCESS_KEY=foobar_secret
+  - AWS_ACCESS_KEY_ID=foobar_key
   matrix:
   - TWISTED=latest SQLALCHEMY=latest TESTS=coverage
 
