Update and harden systemd service files
- Delete the redundant worker service file

- Adjust the remaining service files to comply with the Systemd file
  system hierarchy [1], which mandates that user-callable binaries live
  in /usr/bin, and that system data live in /var/lib

- Convert service files into template units based on the subdirectory of
  /var/lib where the configuration lives. For instance a master whose
  configuration lives in /var/lib/buildbot/master would be invoked by:

    systemctl start buildbot@master.service

  Likewise, a worker is invoked by:

    systemctl start buildbot-worker@worker.service

- Harden the services by removing their access to /home, giving them
  private /tmp and /dev trees, and effectively removing write access to
  the rest of the system

[1] - https://www.freedesktop.org/software/systemd/man/file-hierarchy.html

--- a/master/contrib/systemd/buildbot@.service
+++ b/master/contrib/systemd/buildbot@.service
@@ -1,17 +1,18 @@
 [Unit]
 Description=Buildbot Master
-Wants=network.target
 After=network.target
-
 
 [Service]
 User=buildbot
 Group=buildbot
-WorkingDirectory=/home/buildbot/master
-ExecStart=/usr/local/bin/buildbot start --nodaemon
+WorkingDirectory=/var/lib/buildbot
+ExecStart=/usr/bin/buildbot --verbose start --nodaemon %I
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
-User=buildbot
+ProtectSystem=full
+ProtectHome=yes
+PrivateDevices=yes
+PrivateTmp=yes
 
 [Install]
 WantedBy=multi-user.target
