--- a/worker/contrib/systemd/buildbot-worker@.service
+++ b/worker/contrib/systemd/buildbot-worker@.service
@@ -1,18 +1,19 @@
 [Unit]
 Description=Buildbot Worker
-Wants=network.target
 After=network.target
-
 
 [Service]
 User=buildbot
 Group=buildbot
-WorkingDirectory=/home/buildbot/worker
-ExecStart=/usr/local/bin/buildbot-worker start --nodaemon
+WorkingDirectory=/var/lib/buildbot/
+ExecStart=/usr/bin/buildbot-worker start --nodaemon %I
 # if using EC2 Latent worker, you want to uncomment following line, and comment out the Restart line
 # ExecStopPost=shutdown now
 Restart=always
-User=buildbot
+ProtectSystem=full
+ProtectHome=yes
+PrivateDevices=yes
+PrivateTmp=yes
 
 [Install]
 WantedBy=multi-user.target
