--- a/www/react-ui/package.json
+++ b/www/react-ui/package.json
@@ -82,6 +82,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@vitejs/plugin-react": "^3.1.0",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.1",
