--- a/requirements-cidocs.txt
+++ b/requirements-cidocs.txt
@@ -1,7 +1,14 @@
-Sphinx==5.1.1
+Sphinx==6.1.3
 sphinx-jinja==2.0.2
-sphinx-rtd-theme==1.0.0
-sphinxcontrib-spelling==7.6.0
+sphinx-rtd-theme==1.2.0
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jquery==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-spelling==8.0.0
 sphinxcontrib-websupport==1.2.4
-Pygments==2.12.0
+Pygments==2.13.0
 towncrier==21.9.0
