--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -4,7 +4,9 @@
 # we install buildbot www from pypi to avoid the slow nodejs build at each test
 buildbot-www==3.8.0
 
-autobahn==23.1.2
+autobahn==23.6.2;  python_version >= "3.9"
+autobahn==22.7.1;  python_version < "3.9" and python_version >= "3.7"  # pyup: ignore
+autobahn==20.12.3;  python_version < "3.7" and python_version >= "3.6"  # pyup: ignore
 boto3==1.24.60
 flake8==5.0.4
 msgpack==1.0.4
