--- a/requirements-ciworker.txt
+++ b/requirements-ciworker.txt
@@ -15,7 +15,8 @@ incremental==22.10.0;  python_version >= "3.6"
 incremental==17.5.0;  python_version < "3.0"  # pyup: ignore
 # pin mock, because 4.x no longer supports Python 3.5
 mock==3.0.5  # pyup: ignore
-parameterized==0.8.1
+parameterized==0.8.1;  python_version < "3.6"  # pyup: ignore
+parameterized==0.9.0;  python_version >= "3.6"
 pbr==5.11.1
 # pin PyHamcrest, because 2.x no longer supports Python 2.7
 PyHamcrest==1.9.0  # pyup: ignore
