--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -41,7 +41,8 @@ cryptography==39.0.2
 decorator==5.1.1
 dicttoxml==1.7.4
 dill==0.3.6
-docker==5.0.3
+docker==5.0.3;  python_version < "3.7" # pyup: ignore (6.0.0 droppeded support for < Python 3.7 see: https://docker-py.readthedocs.io/en/stable/change-log.html#id8)
+docker==6.1.2;  python_version >= "3.7"
 docutils==0.17.1  # pyup: ignore (sphinx-rtd-theme 1.0.0 requires docutils<0.18)
 extras==1.0.0
 fixtures==4.0.1
