--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -103,7 +103,8 @@ responses==0.23.1
 ruamel.yaml==0.17.32
 s3transfer==0.6.1
 scandir==1.10.0
-service-identity==21.1.0
+service-identity==21.1.0;  python_version < "3.8"  # pyup: ignore
+service-identity==23.1.0;  python_version >= "3.8"
 setuptools-trial==0.6.0
 singledispatch==3.7.0
 six==1.16.0
