--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,6 @@
 [settings]
 line_length=110
-known_future_library=__future__,future
+known_future_library=__future__
 known_standard_library=html
 known_twisted=twisted,zope,autobahn,klein,txaio
 known_mock=mock
