--- a/requirements-ciworker.txt
+++ b/requirements-ciworker.txt
@@ -3,7 +3,8 @@ attrs==23.1.0;  python_version >= "3.6"
 autobahn==23.6.2;  python_version >= "3.9"
 autobahn==22.7.1;  python_version < "3.9" and python_version >= "3.7"  # pyup: ignore
 autobahn==20.12.3;  python_version < "3.7" and python_version >= "3.6"  # pyup: ignore
-Automat==20.2.0
+Automat==20.2.0;  python_version < "3.6"  # pyup: ignore
+Automat==22.10.0;  python_version >= "3.6"
 cffi==1.15.1;  python_version >= "3.6"
 constantly==15.1.0
 cryptography==39.0.2;  python_version >= "3.6"
@@ -13,8 +14,8 @@ hyperlink==21.0.0
 idna==2.10  # pyup: ignore (conflicts with moto on master)
 incremental==22.10.0;  python_version >= "3.6"
 incremental==17.5.0;  python_version < "3.0"  # pyup: ignore
-# pin mock, because 4.x no longer supports Python 3.5
-mock==3.0.5  # pyup: ignore
+mock==3.0.5;  python_version < "3.6"  # pyup: ignore
+mock==5.1.0;  python_version >= "3.6"
 parameterized==0.8.1;  python_version < "3.6"  # pyup: ignore
 parameterized==0.9.0;  python_version >= "3.6"
 pbr==5.11.1
@@ -26,7 +27,7 @@ six==1.16.0
 Twisted==22.4.0;  python_version >= "3.6"
 Twisted==20.3.0;  python_version < "3.6"  # pyup: ignore
 txaio==23.1.1;  python_version >= "3.6"
-typing-extensions==4.3.0;  python_version >= "3.7"
+typing-extensions==4.7.1;  python_version >= "3.7"
 typing-extensions==4.3.0;  python_version < "3.7" and python_version >= "3.5"
 zope.interface==5.4.0
 -e worker
