Remove requirements-minimal.txt
This file duplicates other requirements files and makes it more
difficult to align packets versions between them.

--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -54,7 +54,7 @@ matrix:
       env: TWISTED=latest SQLALCHEMY=latest TESTS=trial
 
     - python: "3.9"
-      env: TWISTED=latest SQLALCHEMY=latest TESTS=minimal_install
+      env: TWISTED=latest SQLALCHEMY=latest TESTS=dev_virtualenv
 
     # Worker-master interoperability tests
     - python: "3.9"
@@ -97,10 +97,10 @@ matrix:
 # Dependencies installation commands
 install:
   - pip install -U pip wheel
-  - condition: TESTS not in ("minimal_install", "smokes", "trial_worker")
+  - condition: TESTS not in ("dev_virtualenv", "smokes", "trial_worker")
     cmd: pip install -r requirements-ci.txt
-  - condition: TESTS == "minimal_install"
-    cmd: pip install -r requirements-minimal.txt
+  - condition: TESTS == "dev_virtualenv"
+    cmd: pip install -r requirements-ci.txt -r requirements-ciworker.txt -r requirements-cidocs.txt
   - condition: TESTS == "trial_worker"
     cmd: pip install -r requirements-ciworker.txt
   - condition: TESTS == "docs"
@@ -154,7 +154,7 @@ script:
     cmd: make frontend_tests_headless
 
   - title: master and worker tests
-    condition: TESTS in ("minimal_install", "trial")
+    condition: TESTS in ("dev_virtualenv", "trial")
     cmd: trial  --reporter=text --rterrors buildbot.test buildbot_worker.test
 
   - title: interop tests
