--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -112,7 +112,8 @@ setuptools-trial==0.6.0
 singledispatch==4.0.0
 six==1.16.0
 snowballstemmer==2.2.0
-SQLAlchemy==1.4.40
+# Buildbot supports only sqlalchemy >= 1.3.0, < 1.5
+SQLAlchemy==1.4.40  # pyup: ignore
 sqlparse==0.4.4
 termcolor==1.1.0
 testtools==2.5.0
