--- a/requirements-cidocs.txt
+++ b/requirements-cidocs.txt
@@ -1,10 +1,10 @@
-Sphinx==6.1.3
+Sphinx==7.0.1
 sphinx-jinja==2.0.2
-sphinx-rtd-theme==1.2.0
+sphinx-rtd-theme==1.3.0rc1
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jquery==2.0.0
+sphinxcontrib-jquery==4.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
