--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -129,7 +129,8 @@ txrequests==0.9.6
 types-PyYAML==6.0.12.11
 typing_extensions==4.7.1
 unidiff==0.7.5
-urllib3==1.26.11
+# botocore depends on urllib3<1.27
+urllib3==1.26.11  # pyup: ignore
 webcolors==1.13
 websocket-client==1.6.1
 Werkzeug==2.2.3;  python_version < "3.8"  # pyup: ignore
