--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -35,7 +35,8 @@ chardet==5.1.0
 charset-normalizer==3.2.0
 click-default-group==1.2.2
 click==8.1.5
-configparser==5.2.0;  python_version < "3.8"
+configparser==5.2.0;  python_version < "3.7" # pyup: ignore (see: https://configparser.readthedocs.io/en/latest/history.html)
+configparser==5.3.0;  python_version >= "3.7" and python_version < "3.8" # pyup: ignore (see: https://configparser.readthedocs.io/en/latest/history.html)
 configparser==6.0.0;  python_version >= "3.8"
 constantly==15.1.0
 cookies==2.2.1
