--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,7 +1,7 @@
 [settings]
 line_length=110
 known_future_library=__future__,future
-known_standard_library=pkg_resources,html
+known_standard_library=html
 known_twisted=twisted,zope,autobahn,klein,txaio
 known_mock=mock
 known_third_party=migrate,sqlalchemy,ldap3,txrequests,requests,MySQLdb,coverage,jinja2,dateutil,sphinx,setuptools,jwt,flask,docutils,aiohttp
