--- a/www/react-ui/package.json
+++ b/www/react-ui/package.json
@@ -83,6 +83,8 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-test-renderer": "^18.0.0",
     "@vitejs/plugin-react": "^3.1.0",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.1",
@@ -100,6 +102,7 @@
     "react-bootstrap": "^1.6.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.56.0",
     "vite": "^4.2.3",
     "vite-plugin-dts": "^2.1.0",
