--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -40,7 +40,8 @@ configparser==5.3.0;  python_version >= "3.7" and python_version < "3.8" # pyup:
 configparser==6.0.0;  python_version >= "3.8"
 constantly==15.1.0
 cookies==2.2.1
-coverage==7.2.7
+coverage==7.2.7;  python_version < "3.8"  # pyup: ignore (see: https://github.com/nedbat/coveragepy/releases/tag/7.3.0)
+coverage==7.3.0;  python_version >= "3.8"
 croniter==1.4.1
 cryptography==41.0.3
 decorator==5.1.1
